# scrctrl

./: .gitignore  LICENSE  NOTICE  README.md  THIRD-PARTY-LICENSES.md  pyproject.toml  scrcpy-menu.py  scrcpy_cli.py  scrcpy_legacy_menu.py  scrcpy_manager.py  scrcpy_tui.py
.github/workflows/: ci.yml
licenses/: scrcpy-LICENSE
scripts/: scrcpy-camera.py  scrcpy-detect.py  scrcpy-discover.py  scrcpy-launch.py  scrcpy-menu.py  scrcpy-profile.py  scrcpy-quick.py  scrcpy-quickapp.py  scrcpy-setup.py  scrcpy-shutdown.py  scrcpy-update.py
