[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrctrl"
version = "1.0.0"
description = "A Python TUI/CLI manager for scrcpy — device discovery, profiles, wireless ADB setup, and auto-updates"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "mozayed007", email = "moh.z.ahmed007@gmail.com"},
]
keywords = ["scrcpy", "android", "adb", "mirroring", "tui", "cli", "windows"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
tui = ["textual>=0.50.0"]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "textual>=0.50.0",
]

[project.urls]
Homepage = "https://github.com/mozayed007/scrctrl"
Documentation = "https://github.com/mozayed007/scrctrl#readme"
Repository = "https://github.com/mozayed007/scrctrl"
Issues = "https://github.com/mozayed007/scrctrl/issues"

[project.scripts]
scrctrl = "scrcpy_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scrcpy_*"]
exclude = ["scripts*", "tests*", "legacy*", "config*", "bin*"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate (commented-out code)
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "SIM108", # Use ternary operator (sometimes less readable)
    "TCH001", # TYPE_CHECKING imports in typing blocks (we use TYPE_CHECKING)
    "TCH002", # TYPE_CHECKING imports in typing blocks (we use TYPE_CHECKING)
    "TC003",  # Standard library imports used at runtime in signatures
]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]  # sys.path manipulation before imports is intentional

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["textual.*"]
ignore_missing_imports = true
